Vetical aligning the li markers - correcting margin

--- a/css/reads.css
+++ b/css/reads.css
@@ -23,7 +23,7 @@ li {
   display: flex;
   align-items: center;
   list-style-type: none; /* Remove default marker */
-  margin: 1rem;
+  margin: 0rem;
 }
 
 ol {
